--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contadorvueltas",
-  "homepage": "https://github.com/maxinadalin/Contador",
+  "homepage": "https://maxinadalin.github.io/Contador/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
